--- a/mpxyhl/src/main/res/values/strings.xml
+++ b/mpxyhl/src/main/res/values/strings.xml
@@ -115,4 +115,6 @@
     <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
     <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
     <string name="style_hint">style为数字</string>
+
+    <string name="no_result">对不起，没有搜索到相关数据！</string>
 </resources>
